--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,14 +16,15 @@ source:
 
 build:
   merge_build_host: True  # [win]
-  number: 0
-  skip: true  # [win]
+  number: 1
+
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
+    - {{posix}}zip               # [win]
 
   host:
     - r-base
