--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.3.0' %}
+{% set version = '1.4.0' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,11 +10,11 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/pkgdown_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/pkgdown/pkgdown_{{ version }}.tar.gz
-  sha256: 67bd1a027fe498390087fbc99cd17391017dd15ef619d259f4015a0b476a72ab
+  sha256: 94b2517617d344114c826bafff3758fe42eb6d87efa2b5cf6ee0854f659a910d
 
 build:
   merge_build_host: True  # [win]
-  number: 1001
+  number: 0
   noarch: generic
   rpaths:
     - lib/R/lib/
@@ -22,11 +22,10 @@ build:
 
 requirements:
   build:
-
+    - {{posix}}zip               # [win]
   host:
     - r-base
     - r-mass
-    - r-r6
     - r-callr >=2.0.2
     - r-cli
     - r-crayon
@@ -40,14 +39,11 @@ requirements:
     - r-magrittr
     - r-memoise
     - r-openssl
-    - r-pkgload >=1.0.2
     - r-processx
     - r-purrr
     - r-rematch2
-    - r-rlang >=0.2.0
+    - r-rlang >=0.3.0
     - r-rmarkdown >=1.1.9007
-    - r-roxygen2
-    - r-rsconnect
     - r-rstudioapi
     - r-tibble
     - r-whisker
@@ -57,7 +53,6 @@ requirements:
   run:
     - r-base
     - r-mass
-    - r-r6
     - r-callr >=2.0.2
     - r-cli
     - r-crayon
@@ -71,14 +66,11 @@ requirements:
     - r-magrittr
     - r-memoise
     - r-openssl
-    - r-pkgload >=1.0.2
     - r-processx
     - r-purrr
     - r-rematch2
-    - r-rlang >=0.2.0
+    - r-rlang >=0.3.0
     - r-rmarkdown >=1.1.9007
-    - r-roxygen2
-    - r-rsconnect
     - r-rstudioapi
     - r-tibble
     - r-whisker
@@ -98,7 +90,9 @@ about:
     your documentation, vignettes, 'README', and more to  'HTML' making it easy to share
     information about your package online.
   license_family: MIT
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/MIT'
+  license_file:
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/MIT'
+    - LICENSE
 
 extra:
   recipe-maintainers:
@@ -106,22 +100,22 @@ extra:
 
 # Package: pkgdown
 # Title: Make Static HTML Documentation for a Package
-# Version: 1.3.0
+# Version: 1.4.0
 # Authors@R: c( person("Hadley", "Wickham", , "hadley@rstudio.com", role = c("aut", "cre"),  comment = c(ORCID = "0000-0003-4757-117X") ), person("Jay", "Hesselberth", role = "aut",  comment = c(ORCID = "0000-0002-6299-179X") ), person("RStudio", role = c("cph", "fnd")) )
 # Description: Generate an attractive and useful website from a source package. 'pkgdown' converts your documentation, vignettes, 'README', and more to  'HTML' making it easy to share information about your package online.
 # License: MIT + file LICENSE
 # URL: https://pkgdown.r-lib.org, https://github.com/r-lib/pkgdown
 # BugReports: https://github.com/r-lib/pkgdown/issues
 # Depends: R (>= 3.1.0)
-# Imports: callr (>= 2.0.2), cli, crayon, desc, digest, evaluate, fs (>= 1.2.0), fansi, highlight, httr, magrittr, MASS, memoise, openssl, pkgload (>= 1.0.2), purrr, processx, R6, rematch2, rlang (>= 0.2.0), rmarkdown (>= 1.1.9007), roxygen2, rsconnect, rstudioapi, tibble, tools, whisker, withr, xml2 (>= 1.1.1), yaml
-# Suggests: covr, devtools, htmlwidgets, jsonlite, knitr, leaflet, testthat, rticles
+# Imports: callr (>= 2.0.2), cli, crayon, desc, digest, evaluate, fs (>= 1.2.0), fansi, highlight, httr, magrittr, MASS, memoise, openssl, purrr, processx, rematch2, rlang (>= 0.3.0), rmarkdown (>= 1.1.9007), rstudioapi, tibble, tools, whisker, withr, xml2 (>= 1.1.1), yaml
+# Suggests: covr, htmlwidgets, jsonlite, knitr, leaflet, pkgload (>= 1.0.2), testthat (>= 2.1.0), rticles, rsconnect
 # VignetteBuilder: knitr
 # SystemRequirements: pandoc
 # RoxygenNote: 6.1.1
 # Encoding: UTF-8
 # NeedsCompilation: no
-# Packaged: 2018-12-06 21:58:07 UTC; hadley
+# Packaged: 2019-09-03 16:13:41 UTC; hadley
 # Author: Hadley Wickham [aut, cre] (<https://orcid.org/0000-0003-4757-117X>), Jay Hesselberth [aut] (<https://orcid.org/0000-0002-6299-179X>), RStudio [cph, fnd]
 # Maintainer: Hadley Wickham <hadley@rstudio.com>
 # Repository: CRAN
-# Date/Publication: 2018-12-07 00:50:07 UTC
+# Date/Publication: 2019-09-03 16:40:02 UTC
