--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,57 +25,47 @@ requirements:
     - {{ posix }}zip               # [win]
   host:
     - r-base
-    - r-mass
     - r-callr >=2.0.2
-    - r-cli
     - r-crayon
     - r-desc
     - r-digest
-    - r-evaluate
-    - r-fansi
-    - r-fs >=1.2.0
-    - r-highlight
-    - r-httr
+    - r-downlit
+    - r-fs >=1.3.0
+    - r-httr >=1.4.2
     - r-magrittr
     - r-memoise
     - r-openssl
-    - r-processx
     - r-purrr
+    - r-ragg
     - r-rematch2
     - r-rlang >=0.3.0
     - r-rmarkdown >=1.1.9007
-    - r-rstudioapi
     - r-tibble
     - r-whisker
     - r-withr
-    - r-xml2 >=1.1.1
+    - r-xml2 >=1.3.1
     - r-yaml
   run:
     - r-base
-    - r-mass
     - r-callr >=2.0.2
-    - r-cli
     - r-crayon
     - r-desc
     - r-digest
-    - r-evaluate
-    - r-fansi
-    - r-fs >=1.2.0
-    - r-highlight
-    - r-httr
+    - r-downlit
+    - r-fs >=1.3.0
+    - r-httr >=1.4.2
     - r-magrittr
     - r-memoise
     - r-openssl
-    - r-processx
     - r-purrr
+    - r-ragg
     - r-rematch2
     - r-rlang >=0.3.0
     - r-rmarkdown >=1.1.9007
-    - r-rstudioapi
     - r-tibble
     - r-whisker
     - r-withr
-    - r-xml2 >=1.1.1
+    - r-xml2 >=1.3.1
     - r-yaml
 
 test:
