--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,22 +23,23 @@ build:
 requirements:
   build:
     - {{ posix }}zip               # [win]
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
   host:
     - r-base
+    - r-bslib
     - r-callr >=2.0.2
     - r-crayon
     - r-desc
     - r-digest
-    - r-downlit
-    - r-fs >=1.3.0
+    - r-downlit >=0.4.0
+    - r-fs >=1.4.0
     - r-httr >=1.4.2
+    - r-jsonlite
     - r-magrittr
     - r-memoise
-    - r-openssl
     - r-purrr
     - r-ragg
-    - r-rematch2
-    - r-rlang >=0.3.0
+    - r-rlang >=0.4.0
     - r-rmarkdown >=1.1.9007
     - r-tibble
     - r-whisker
@@ -47,20 +48,20 @@ requirements:
     - r-yaml
   run:
     - r-base
+    - r-bslib
     - r-callr >=2.0.2
     - r-crayon
     - r-desc
     - r-digest
-    - r-downlit
-    - r-fs >=1.3.0
+    - r-downlit >=0.4.0
+    - r-fs >=1.4.0
     - r-httr >=1.4.2
+    - r-jsonlite
     - r-magrittr
     - r-memoise
-    - r-openssl
     - r-purrr
     - r-ragg
-    - r-rematch2
-    - r-rlang >=0.3.0
+    - r-rlang >=0.4.0
     - r-rmarkdown >=1.1.9007
     - r-tibble
     - r-whisker
